--- a/static/scss/buyit/_navbar.scss
+++ b/static/scss/buyit/_navbar.scss
@@ -1,7 +1,6 @@
 @media (max-width:992px) {
     .navbar-header {
         width: 80%;
-
     }
 }
 
@@ -10,3 +9,6 @@
     display: flex;
 }
 
+#navbar {
+    transition: top 0.3s cubic-bezier(0.4, 0, 1, 1) 0s;
+}
